PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
#INCLUDE_DIRECTORIES(/usr/local/include/)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS_DEBUG "-O3 -Wall -g -std=c99")
ADD_EXECUTABLE(test test.c zmalloc.c list.c)
ADD_EXECUTABLE(socks5 socks5.c)
TARGET_LINK_LIBRARIES(socks5 pthread)

ADD_EXECUTABLE(ET ET.c)

#INCLUDE_DIRECTORIES(/usr/include/mysql/)
#LINK_DIRECTORIES(/usr/lib/mysql/)
#ADD_EXECUTABLE(test_mysql test_mysql.c)
#TARGET_LINK_LIBRARIES(test_mysql mysqlclient)

#TARGET_LINK_LIBRARIES(main boost_thread)
#SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
#SET(CMAKE_CXX_FLAGS_DEBUG "-O3 -Wall -g")
